--- a/layouts/index.html
+++ b/layouts/index.html
@@ -99,3 +99,8 @@
     {{- partial "side/home.html" . -}}
   </aside>
 {{- end -}}
+
+<script>
+  window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/speed-insights/script.js"></script>
