--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -22,9 +22,6 @@
       {{- end -}}
     </div>
   </div>
-  <script>
-    window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
-  </script>
-  <script defer src="/_vercel/speed-insights/script.js"></script>
+  <script defer src="https://va.vercel-scripts.com/v1/speed-insights/script.js"></script>
 </body>
 </html>
