Fix CSP: Allow PostHog assets script from us-assets.i.posthog.com
The CSP was blocking the PostHog array.js script which loads from the
assets subdomain. Added https://us-assets.i.posthog.com to script-src
to allow PostHog initialization and tracking to work properly.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
   {{ partial "head.html" . }}
   
   <!-- Suppress cross-site cookie warnings for Streamlit iframe -->
-  <meta http-equiv="Content-Security-Policy" content="frame-src https://soma-app-dashboard-bfabkj7dkvffezprdsnm78.streamlit.app; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; script-src 'self' 'unsafe-inline' https://us.i.posthog.com;">
+  <meta http-equiv="Content-Security-Policy" content="frame-src https://soma-app-dashboard-bfabkj7dkvffezprdsnm78.streamlit.app; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; script-src 'self' 'unsafe-inline' https://us.i.posthog.com https://us-assets.i.posthog.com;">
   
   <script>
       // Suppress expected cross-site cookie warnings in console
