--- a/layouts/partials/side/home.html
+++ b/layouts/partials/side/home.html
@@ -14,6 +14,9 @@
       <small>Subscribe to my newsletter</small>
     </span>
   </a>
+
+  <iframe src="https://scienceofmarketinganalytics.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+
 </div>
 
 <!-- Tags -->
